Fixed up build path given recent jar changes.  Added support for workflow ingestion from Ant.